<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_capture" />

        <ImageView
            android:id="@+id/documentImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/captureDocButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/document_verification" />

        <Button
            android:id="@+id/verifyDocButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facial_capture" />

        <ImageView
            android:id="@+id/faceImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/captureFaceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facial_comparison" />

        <Button
            android:id="@+id/compareFacesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compare" />

    </LinearLayout>
</ScrollView>